syntax = "proto3";

import "google/protobuf/timestamp.proto";

service Order {
    rpc AddOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
    string item = 1;
    int32 quantity = 2;
}

message OrderResponse {
    string id = 1;
    string item = 2;
    int32 quantity = 3;
    google.protobuf.Timestamp created_at = 4;
}